tests/reference/asr-arrays_12-63d6f25.stderr
semantic error: Type mismatch in annotation-assignment, the types must be compatible
 --> tests/errors/arrays_12.py:5:1
  |
5 | x: i16[5] = empty([5], dtype=int32)
  | ^           ^^^^^^^^^^^^^^^^^^^^^^^ type mismatch ('i16[5]' and 'i32[5]')


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
